--- a/package.json
+++ b/package.json
@@ -8,16 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "cors": "^2.8.5",
+    "element-ui": "^2.0.10",
+    "express": "^4.16.2",
+    "express-session": "^1.17.1",
+    "js-md5": "^0.7.3",
+    "mavon-editor": "^2.9.1",
+    "mongoose": "^5.0.6",
+    "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
+    "router": "^1.3.5",
+    "vue": "^2.6.11",
+    "vue-canvas-nest": "^2.0.0",
+    "vue-cli": "^2.9.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
